<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_calculator_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculator.CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <!--тень и всё остальное-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/start_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start"
                    android:textColor="#D3D3D3"
                    android:textSize="15sp"
                    android:gravity="center_vertical|center_horizontal"/>

                <korablique.recipecalculator.ui.ViewGroupWithMaxHeight
                    android:id="@+id/view_group_with_max_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/start_text_view"
                    custom:max_weight="0.66">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <include
                            android:id="@+id/header"
                            layout="@layout/foodstuff_table_header_layout"/>
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="5dp"
                                android:src="@drawable/shadow_top"
                                android:scaleType="fitXY"
                                android:rotation="180"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/ingredients"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:orientation="vertical"/>
                            <ImageView
                                android:id="@+id/shadow_bottom"
                                android:layout_width="match_parent"
                                android:layout_height="5dp"
                                android:src="@drawable/shadow_top"
                                android:scaleType="fitXY"
                                android:layout_gravity="bottom"
                                android:visibility="gone"/>
                        </FrameLayout>
                    </LinearLayout>
                </korablique.recipecalculator.ui.ViewGroupWithMaxHeight>

                <LinearLayout
                    android:id="@+id/result_weight_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/view_group_with_max_height">

                    <TextView
                        android:id="@+id/result_weight_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:text="@string/weight_of_cooked_product"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/result_weight_edit_text"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="20sp"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <include
                    layout="@layout/calculate_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/result_weight_linear_layout"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_foodstuff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/plus48"
                    app:layout_anchorGravity="bottom|right|end"
                    app:useCompatPadding="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@drawable/shadow_top"
                android:scaleType="fitXY"
                android:rotation="180"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>
