...
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/frame_layout_button_edit"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector">

            <ImageView
                android:id="@+id/button_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete_black" />
        </FrameLayout>

...
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/weight_in_card" />

        <EditText
            android:id="@+id/weight_edit_text"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            android:layout_marginEnd="11.5dp"
            android:inputType="numberDecimal"
...
