...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/statistics_layout"
                android:padding="20dp">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/VioletButton"
                    android:text="@string/save" />
            </FrameLayout>

...
